[gd_scene load_steps=3 format=2]

[ext_resource path="res://broker/Portfolio.gd" type="Script" id=1]
[ext_resource path="res://broker/Sorter.gd" type="Script" id=2]

[node name="Portfolio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sorter" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Value" type="Button" parent="Sorter"]
margin_left = 38.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 30.0
text = "Valor"

[node name="Expiration" type="Button" parent="Sorter"]
margin_left = 138.0
margin_top = 10.0
margin_right = 238.0
margin_bottom = 30.0
text = "Validade"

[node name="Rentability" type="Button" parent="Sorter"]
margin_left = 238.0
margin_top = 10.0
margin_right = 338.0
margin_bottom = 30.0
text = "Rentabilidade"

[node name="Type" type="Button" parent="Sorter"]
margin_left = 338.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 30.0
text = "Tipo"

[node name="BoughtTime" type="Button" parent="Sorter"]
margin_left = 438.0
margin_top = 10.0
margin_right = 538.0
margin_bottom = 30.0
text = "Aquisição"

[node name="Bonds" type="Control" parent="Sorter"]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0

[node name="Tween" type="Tween" parent="Sorter"]

[connection signal="pressed" from="Sorter/Value" to="Sorter" method="_on_Value_pressed"]
[connection signal="pressed" from="Sorter/Expiration" to="Sorter" method="_on_Expiration_pressed"]
[connection signal="pressed" from="Sorter/Rentability" to="Sorter" method="_on_Rentability_pressed"]
[connection signal="pressed" from="Sorter/Type" to="Sorter" method="_on_Type_pressed"]
[connection signal="pressed" from="Sorter/BoughtTime" to="Sorter" method="_on_BoughtTime_pressed"]
